Fix align issue

--- a/src/speech/style.scss
+++ b/src/speech/style.scss
@@ -40,6 +40,7 @@
 
       > span {
         vertical-align: middle;
+        margin-top: 1px;
       }
     }
   }
